--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-<<<<<<< HEAD
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
+node_modules/
+node-modules
 # testing
 /coverage
 
@@ -102,7 +102,7 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
